@@ -3,7 +3,7 @@
 use strict;
 use Test qw(plan ok skip);
 
-plan tests => 129;
+plan tests => 131;
 
 require HTTP::Message;
 use Config qw(%Config);
@@ -492,3 +492,9 @@ else {
 # test decoding of XML content
 $m = HTTP::Message->new(["Content-Type", "application/xml"], "\xFF\xFE<\0?\0x\0m\0l\0 \0v\0e\0r\0s\0i\0o\0n\0=\0\"\x001\0.\x000\0\"\0 \0e\0n\0c\0o\0d\0i\0n\0g\0=\0\"\0U\0T\0F\0-\x001\x006\0l\0e\0\"\0?\0>\0\n\0<\0r\0o\0o\0t\0>\0\xC9\0r\0i\0c\0<\0/\0r\0o\0o\0t\0>\0\n\0");
 ok($m->decoded_content, "<?xml version=\"1.0\"?>\n<root>\xC9ric</root>\n");
+
+# 
+$foo = "фу"; # Cyrillic "foo"
+$m = HTTP::Message->new(undef, \$foo);
+ok($m->content, "фу");
+ok($m->decoded_content, "фу");
